# ntchffs-overlay

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSES.md  buildspec.json  readme.md
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml  push.yaml
cmake/common/: bootstrap.cmake
cmake/windows/: helpers.cmake
cmake/windows/resources/: icons.rc.in  installer.iss.in
data/locale/: en-US.ini  ru-RU.ini
src/common/: overlay-ffmpeg-time-utils.h  overlay-ffmpeg-video-decode.h  overlay-icons-resource.h  overlay-mp4-box-reader.cpp  overlay-mp4-box-reader.h  overlay-string-utils.cpp  overlay-string-utils.h
src/indicators/: overlay-indicators-c.cpp  overlay-indicators-c.h  overlay-indicators.cpp  overlay-indicators.h
src/player/: overlay-video-player.cpp  overlay-video-player.h
src/plugin/: overlay-runtime-apply.h  overlay-settings-storage.cpp  overlay-settings-storage.h  overlay-smart-replay.cpp  overlay-smart-replay.h  plugin-main.cpp  plugin-support.h
src/renderer/: overlay-gallery.cpp  overlay-gallery.h  overlay-layout.cpp  overlay-layout.h  overlay-renderer-input.cpp  overlay-renderer.cpp  overlay-renderer.h  overlay-state.cpp  overlay-state.h
src/trimmer/: overlay-trimmer.cpp  overlay-trimmer.h
src/ui/: overlay-settings-dialog.cpp  overlay-settings-dialog.h
src/window/: overlay-window-c.cpp  overlay-window-c.h  overlay-window-manager.cpp  overlay-window-manager.h
